--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<h1>我的 Todo</h1>
 		<!--总容器开始-->
 		<div class="add-task">
-			<input type="text">
+			<input type="text" placeholder="e.g. 去图书馆看书">
 			<button type="submit">submit</button>
 		</div>
 
@@ -73,6 +73,7 @@
 			<!--任务结束-->
 		</div>
 		<!--清单列表结束-->
+		<div class="task-detail-mask"></div>
 		<div class="task-detail">
 			<!--任务详情开始-->
 			<div class="content">
@@ -95,6 +96,7 @@
 			<!--任务定时提醒关闭-->
 		</div>
 		<!--任务详情结束-->
+		
 	</div>
 	<!--总容器结束-->
 
