--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 
 
 	<script src="./node_modules\jquery\dist\jquery.js"></script>
+	<script src="node_modules/store/store.min.js"></script>
 	<script src="./js/base.js"></script>
 </body>
 
