--- a/index.html
+++ b/index.html
@@ -15,62 +15,16 @@
 	<div class="container">
 		<h1>我的 Todo</h1>
 		<!--总容器开始-->
-		<div class="add-task">
-			<input type="text" placeholder="e.g. 去图书馆看书">
+		<form class="add-task">
+			<input name="content" type="text" placeholder="e.g. 去图书馆看书">
 			<button type="submit">submit</button>
-		</div>
+		</form>
 
 
 		<div class="tasks-list">
 			<!--清单列表开始-->
-			<div class="task-item">
-				<!--任务开始-->
-				<span><input type="checkbox"></span>
-				<span class="task-content">1</span>
-				<span>delete</span>
-				<span>delete</span>
-				<span>detail</span>
-			</div>
-			<div class="task-item">
-				<!--任务开始-->
-				<span><input type="checkbox"></span>
-				<span class="task-content">2</span>
-				<span>delete</span>
-				<span>delete</span>
-				<span>detail</span>
-			</div>
-			<div class="task-item">
-				<!--任务开始-->
-				<span><input type="checkbox"></span>
-				<span class="task-content">3</span>
-				<span>delete</span>
-				<span>delete</span>
-				<span>detail</span>
-			</div>
-			<div class="task-item">
-				<!--任务开始-->
-				<span><input type="checkbox"></span>
-				<span class="task-content">4</span>
-				<span>delete</span>
-				<span>delete</span>
-				<span>detail</span>
-			</div>
-			<div class="task-item">
-				<!--任务开始-->
-				<span><input type="checkbox"></span>
-				<span class="task-content">5</span>
-				<span>delete</span>
-				<span>delete</span>
-				<span>detail</span>
-			</div>
-			<div class="task-item">
-				<!--任务开始-->
-				<span><input type="checkbox"></span>
-				<span class="task-content">6</span>
-				<span>delete</span>
-				<span>delete</span>
-				<span>detail</span>
-			</div>
+			
+
 			<!--任务结束-->
 		</div>
 		<!--清单列表结束-->
@@ -111,7 +65,7 @@
 
 
 	<script src="./node_modules\jquery\dist\jquery.js"></script>
-	<script src="node_modules/store/store.min.js"></script>
+	<script src="./node_modules/store/store.min.js"></script>
 	<script src="./js/base.js"></script>
 </body>
 
