--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<h1>我的 Todo</h1>
 		<!--总容器开始-->
 		<form class="add-task">
-			<input name="content" type="text" placeholder="e.g. 去图书馆看书" autocomplete="off">
+			<input name="content" type="text" autofocus placeholder="e.g. 去图书馆看书" autocomplete="off">
 			<button type="submit">submit</button>
 		</form>
 
