--- a/index.html
+++ b/index.html
@@ -27,29 +27,11 @@
 		</div>
 		<!--清单列表结束-->
 		<div class="task-detail-mask"></div>
-		<div class="task-detail"><!--任务详情开始-->
-			
-			<div class="content"><!--任务标题开始-->
-				下午记得买菜
+		<div class="task-detail">
 
-			</div><!--任务标题结束-->
-			
-			<div><!--任务描述开始-->
-				
-				<div class="desc">
-					<textarea name="" id="" ></textarea>
-				</div>
-			</div>
-			<!--任务描述结束-->
-			<div class="remind">
-				<!--任务定时提醒开始-->
-				<input type="date">
-				<!--<button type="submit">submit</button>-->
-			</div>
-			<!--任务定时提醒关闭-->
 		</div>
 		<!--任务详情结束-->
-		
+
 	</div>
 	<!--总容器结束-->
 
