--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>My Todo</title>
 	<link rel="stylesheet" href="./node_modules/normalize.css/normalize.css">
+	<link rel="stylesheet" href="./node_modules/jquery-datetimepicker/build/jquery.datetimepicker.min.css">
 	<link rel="stylesheet" href="./css/base.css">
 </head>
 
@@ -45,7 +46,8 @@
 
 
 	<script src="./node_modules\jquery\dist\jquery.js"></script>
-	<script src="./node_modules/store/store.min.js"></script>
+	<script src="./node_modules/jquery-datetimepicker/build/jquery.datetimepicker.full.min.js"></script>
+	<script src="./node_modules/store/store.min.js"></script>	
 	<script src="./js/base.js"></script>
 </body>
 
