--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 </head>
 
 <body>
-
+	<div class="msg">
+		<span class="msg-content"></span >
+		<button type="button">知道了</button>
+	</div>
 	<div class="container">
 		<h1>我的 Todo</h1>
 		<!--总容器开始-->
