--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="msg">
 		<span class="msg-content"></span >
-		<button type="button">知道了</button>
+		<span class="anchor confirmed">知道了</span>
 	</div>
 	<div class="container">
 		<h1>我的 Todo</h1>
@@ -45,9 +45,9 @@
 
 
 
+	<video src="alert.mp3" class="alerter"></video>
 
-
-
+	
 	<script src="./node_modules\jquery\dist\jquery.js"></script>
 	<script src="./node_modules/jquery-datetimepicker/build/jquery.datetimepicker.full.min.js"></script>
 	<script src="./node_modules/store/store.min.js"></script>	
