--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>My Todo</title>
+
 	<link rel="stylesheet" href="./node_modules/normalize.css/normalize.css">
 	<link rel="stylesheet" href="./node_modules/jquery-datetimepicker/build/jquery.datetimepicker.min.css">
 	<link rel="stylesheet" href="./css/base.css">
+	
 </head>
 
 <body>
@@ -38,20 +40,12 @@
 
 	</div>
 	<!--总容器结束-->
-
-
-
-
-
-
-
 	<video src="alert.mp3" class="alerter"></video>
 
-	
-	<script src="./node_modules\jquery\dist\jquery.js"></script>
-	<script src="./node_modules/jquery-datetimepicker/build/jquery.datetimepicker.full.min.js"></script>
-	<script src="./node_modules/store/store.min.js"></script>	
-	<script src="./js/base.js"></script>
+	<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
+	<script src="https://cdn.bootcss.com/store.js/1.3.20/store.js"></script>
+	<script src="https://cdn.bootcss.com/jquery-datetimepicker/2.5.4/build/jquery.datetimepicker.full.js"></script>
+	<script src="dist/bundle.js"></script>
 </body>
 
 </html>
