--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>My Todo</title>
 
-	<link rel="stylesheet" href="./node_modules/normalize.css/normalize.css">
-	<link rel="stylesheet" href="./node_modules/jquery-datetimepicker/build/jquery.datetimepicker.min.css">
-	<link rel="stylesheet" href="./css/base.css">
-	
+	<link rel="stylesheet" href="https://cdn.bootcss.com/jquery-datetimepicker/2.5.4/build/jquery.datetimepicker.min.css">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/normalize/7.0.0/normalize.css">
+
 </head>
 
 <body>
