--- a/index.html
+++ b/index.html
@@ -14,31 +14,35 @@
 
 <body>
 	<div class="msg">
-		<span class="msg-content"></span >
-		<span class="anchor confirmed">知道了</span>
-	</div>
-	<div class="container">
-		<h1>我的 Todo</h1>
-		<!--总容器开始-->
-		<form class="add-task">
-			<input name="content" type="text" autofocus placeholder="e.g. 去图书馆看书" autocomplete="off">
-			<button type="submit">submit</button>
-		</form>
+    <span class="msg-content"></span>
+    <span class="anchor confirmed">知道了</span>
+</div>
+ <!-- 总容器开始 -->
+<div class="container">
+    <h1>备忘录Pro</h1>
+    <form class="add-task">
+        <input name="content"
+               type="text"
+               placeholder="e.g. jQuery-todo"
+               autocomplete="off"
+               maxlength="17"
+        >
+        <button type="submit">提交</button>
+    </form>
 
+    <!-- 清单列表开始 -->
+    <div class="tasks-list">
 
-		<div class="tasks-list">
-			<!--清单列表开始-->
-			<!--任务结束-->
-		</div>
-		<!--清单列表结束-->
-		<div class="task-detail-mask"></div>
-		<div class="task-detail">
+    </div>    <!-- 清单列表结束 -->
 
-		</div>
-		<!--任务详情结束-->
+    <div class="task-detail-mask"></div>
 
-	</div>
-	<!--总容器结束-->
+    <!-- 任务详情开始 -->
+    <div class="task-detail">
+
+    </div><!-- 任务详情结束 -->
+
+</div><!-- 总容器结束 -->
 	<video src="alert.mp3" class="alerter"></video>
 
 	<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
